fixing spacing

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -49,6 +49,9 @@
     text-align: center;
   }
 
+.aboutTitle {
+  font-size: 3em;
+}
 
   .meImage {
     width: 50%;
